# benchd

./: .gitignore  ANALYSIS.md  LICENSE  PLAN.md  README.md  index.html  sw.js  test.html
assets/: style.css
src/: main.js  scheduler.js  score.js
src/ui/: dashboard.js
src/workers/: compute.worker.js  crypto.worker.js  memory.worker.js
wasm/: Cargo.toml
wasm/pkg/: benchd_wasm.d.ts  benchd_wasm.js  benchd_wasm_bg.wasm  benchd_wasm_bg.wasm.d.ts  package.json
wasm/src/: lib.rs
